--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
-    <title>Grad School HTML5 Template</title>
+    <title>Tatweir Pro</title>
     
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -34,7 +34,8 @@ https://templatemo.com/tm-557-grad-school
   <!--header-->
   <header class="main-header clearfix" role="header">
     <div class="logo">
-      <a href="#"><em>Grad</em> School</a>
+      <img style=" vertical-align: middle; padding-bottom: 2em;"  src="assets/images/t-logo.png"  width="60" height="90" alt="">
+      <a href="#">  <em>atweir</em> </a>
     </div>
     <a href="#menu" class="menu-link"><i class="fa fa-bars"></i></a>
     <nav id="menu" class="main-nav" role="navigation">
@@ -59,13 +60,13 @@ https://templatemo.com/tm-557-grad-school
   <!-- ***** Main Banner Area Start ***** -->
   <section class="section main-banner" id="top" data-section="section1">
       <video autoplay muted loop id="bg-video">
-          <source src="assets/images/course-video.mp4" type="video/mp4" />
+          <source src="assets/images/business-meeting.mp4" type="video/mp4" />
       </video>
 
       <div class="video-overlay header-text">
           <div class="caption">
-              <h6>Graduate School of Management</h6>
-              <h2><em>Your</em> Classroom</h2>
+              <h6>Complete Blueprint For Your Growth</h6>
+              <h2 style="display: flex; align-items: center; justify-content: center;"><span style=" font-size: 0.6em; padding-right: 0.2em;">Accelerate Your </span><em>  Success</em> </h2>
               <div class="main-button">
                   <div class="scroll-to-section"><a href="#section2">Discover more</a></div>
               </div>
@@ -81,12 +82,12 @@ https://templatemo.com/tm-557-grad-school
         <div class="col-lg-4 col-12">
           <div class="features-post">
             <div class="features-content">
-              <div class="content-show">
-                <h4><i class="fa fa-pencil"></i>All Courses</h4>
+              <div class="content-show" >
+                <h4 style="display: flex; align-items: center; justify-content: center;"><i class="fa fa-pencil"></i>Business Development</h4>
               </div>
               <div class="content-hide">
-                <p>Curabitur id eros vehicula, tincidunt libero eu, lobortis mi. In mollis eros a posuere imperdiet. Donec maximus elementum ex. Cras convallis ex rhoncus, laoreet libero eu, vehicula libero.</p>
-                <p class="hidden-sm">Curabitur id eros vehicula, tincidunt libero eu, lobortis mi. In mollis eros a posuere imperdiet.</p>
+                <p>We build effective growth pipelines and operational frameworks to expand your market presence and ensure long-term, sustainable profitability for your company.</p>
+                <p class="hidden-sm">We build growth frameworks and expand market presence to drive your company's long-term profitability and sustainable success.</p>
                 <div class="scroll-to-section"><a href="#section2">More Info.</a></div>
             </div>
             </div>
@@ -96,11 +97,11 @@ https://templatemo.com/tm-557-grad-school
           <div class="features-post second-features">
             <div class="features-content">
               <div class="content-show">
-                <h4><i class="fa fa-graduation-cap"></i>Virtual Class</h4>
+                <h4 style="display: flex; align-items: center; justify-content: center;"><i class="fa fa-graduation-cap"></i> Innovative Strategy</h4>
               </div>
               <div class="content-hide">
-                <p>Curabitur id eros vehicula, tincidunt libero eu, lobortis mi. In mollis eros a posuere imperdiet. Donec maximus elementum ex. Cras convallis ex rhoncus, laoreet libero eu, vehicula libero.</p>
-                <p class="hidden-sm">Curabitur id eros vehicula, tincidunt libero eu, lobortis mi. In mollis eros a posuere imperdiet.</p>
+                <p>We craft creative, data-informed strategies that provide a distinct competitive edge, transforming market challenges into tangible opportunities for breakthrough growth and market leadership.</p>
+                <p class="hidden-sm"> We create unique, data-driven plans to secure a powerful competitive advantage and unlock new growth opportunities.</p>
                 <div class="scroll-to-section"><a href="#section3">Details</a></div>
             </div>
             </div>
@@ -110,11 +111,11 @@ https://templatemo.com/tm-557-grad-school
           <div class="features-post third-features">
             <div class="features-content">
               <div class="content-show">
-                <h4><i class="fa fa-book"></i>Real Meeting</h4>
+                <h4 style="display: flex; align-items: center; justify-content: center;"><i class="fa fa-book"></i>Marketing Solutions</h4>
               </div>
               <div class="content-hide">
-                <p>Curabitur id eros vehicula, tincidunt libero eu, lobortis mi. In mollis eros a posuere imperdiet. Donec maximus elementum ex. Cras convallis ex rhoncus, laoreet libero eu, vehicula libero.</p>
-                <p class="hidden-sm">Curabitur id eros vehicula, tincidunt libero eu, lobortis mi. In mollis eros a posuere imperdiet.</p>
+                <p>We provide integrated consulting services including strategic development, marketing, sales, and digital solutions. Our tailored approach drives sustainable growth and enhances your market positioning to achieve outstanding business results.</p>
+                <p class="hidden-sm">Our integrated consulting in strategic, marketing, and digital solutions drives growth and enhances your market position.</p>
                 <div class="scroll-to-section"><a href="#section4">Read More</a></div>
             </div>
             </div>
@@ -129,15 +130,15 @@ https://templatemo.com/tm-557-grad-school
       <div class="row">
         <div class="col-md-12">
           <div class="section-heading">
-            <h2>Why choose Grad School?</h2>
+            <h2>What is the TATWEIR Program?</h2>
           </div>
         </div>
         <div class="col-md-12">
           <div id='tabs'>
             <ul>
-              <li><a href='#tabs-1'>Best Education</a></li>
-              <li><a href='#tabs-2'>Top Management</a></li>
-              <li><a href='#tabs-3'>Quality Meeting</a></li>
+              <li><a href='#tabs-1'>Business Growing</a></li>
+              <li><a href='#tabs-2'>innovative solutions</a></li>
+              <li><a href='#tabs-3'>Our commitment</a></li>
             </ul>
             <section class='tabs-content'>
               <article id='tabs-1'>
@@ -146,8 +147,8 @@ https://templatemo.com/tm-557-grad-school
                     <img src="assets/images/choose-us-image-01.png" alt="">
                   </div>
                   <div class="col-md-6">
-                    <h4>Best Education</h4>
-                    <p>Grad School is free educational HTML template with Bootstrap 4.5.2 CSS layout. Feel free to use it for educational or commercial purposes. You may want to make <a href="https://paypal.me/templatemo" target="_parent" rel="sponsored">a little donation</a> to TemplateMo. Please tell your friends about us. Thank you.</p>
+                    <h4>Business Growing</h4>
+                    <p>The integrated " Tatweir " program an innovative initiative specialized in providing comprehensive business and marketing solutions. This program is designed to function as a strategic partner for businesses, offering specialized consultations in the fields of business development, marketing, and sales.</p>
                   </div>
                 </div>
               </article>
@@ -157,9 +158,11 @@ https://templatemo.com/tm-557-grad-school
                     <img src="assets/images/choose-us-image-02.png" alt="">
                   </div>
                   <div class="col-md-6">
-                    <h4>Top Level</h4>
-                    <p>You can modify this HTML layout by editing contents and adding more pages as you needed. Since this template has options to add dropdown menus, you can put many HTML pages.</p> 
-                    <p>Suspendisse tincidunt, magna ut finibus rutrum, libero dolor euismod odio, nec interdum quam felis non ante.</p>
+                    <h4>innovative solutions</h4>
+                    <p>The vision of the "Tatweer" program is to deliver practical and innovative solutions that enable businesses to maximize its potential, enhance its market performance, and strengthen its financial results.</p> 
+                    <p> We believe in a collaborative approach, where we become an extension of our client team, listen to their needs, and design solutions that align perfectly with their specific objectives.</p> 
+
+                    <!-- <p>Suspendisse tincidunt, magna ut finibus rutrum, libero dolor euismod odio, nec interdum quam felis non ante.</p> -->
                   </div>
                 </div>
               </article>
@@ -169,8 +172,8 @@ https://templatemo.com/tm-557-grad-school
                     <img src="assets/images/choose-us-image-03.png" alt="">
                   </div>
                   <div class="col-md-6">
-                    <h4>Quality Meeting</h4>
-                    <p>You are NOT allowed to redistribute this template ZIP file on any template collection website. However, you can use this template to convert into a specific theme for any kind of CMS platform such as WordPress. For more information, you shall <a rel="nofollow" href="https://templatemo.com/contact" target="_parent">contact TemplateMo</a> now.</p>
+                    <h4>Our commitment</h4>
+                    <p>Our commitment extends far beyond the delivery of theoretical plans and proposed solutions. We stand beside our client to implement them. Through active supervision and close cooperation,This continuous, cooperative partnership ensures that strategies are not only deployed but also adapted to real-world challenges, guaranteeing that we collectively navigate the path to our client strategic goals and achieve measurable, lasting success.</p>
                   </div>
                 </div>
               </article>
@@ -184,10 +187,15 @@ https://templatemo.com/tm-557-grad-school
   <section class="section coming-soon" data-section="section3">
     <div class="container">
       <div class="row">
-        <div class="col-md-7 col-xs-12">
+        <div class="col-md-12">
+          <div class="section-heading">
+            <h2 style="margin-top:0">What is the TATWEIR Program?</h2>
+          </div>
+        </div>
+        <div class="col-md-6 col-xs-12">
           <div class="continer centerIt">
             <div>
-              <h4>Take <em>any online course</em> and win $326 for your next class</h4>
+              <!-- <h4>Take <em>any online course</em> and win $326 for your next class</h4> -->
               <div class="counter">
 
                 <div class="days">
@@ -214,7 +222,37 @@ https://templatemo.com/tm-557-grad-school
             </div>
           </div>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-6 col-xs-12">
+          <div class="continer centerIt">
+            <div>
+              <!-- <h4>Take <em>any online course</em> and win $326 for your next class</h4> -->
+              <div class="counter">
+
+                <div class="days">
+                  <div class="value">00</div>
+                  <span>Days</span>
+                </div>
+
+                <div class="hours">
+                  <div class="value">00</div>
+                  <span>Hours</span>
+                </div>
+
+                <div class="minutes">
+                  <div class="value">00</div>
+                  <span>Minutes</span>
+                </div>
+
+                <div class="seconds">
+                  <div class="value">00</div>
+                  <span>Seconds</span>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- <div class="col-md-5">
           <div class="right-content">
             <div class="top-content">
               <h6>Register your free account and <em>get immediate</em> access to online courses</h6>
@@ -244,7 +282,7 @@ https://templatemo.com/tm-557-grad-school
               </div>
             </form>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -425,7 +463,7 @@ https://templatemo.com/tm-557-grad-school
               <h4>Power HTML Template</h4>
             </div>
             <figure>
-              <a href="https://www.youtube.com/watch?v=r9LtOG6pNUw" class="play"><img src="assets/images/main-thumb.png"></a>
+              <a href="https://www.youtube.com/watch?v=2GmH-RLyUug" class="play"><img src="assets/images/main-thumb.png"></a>
             </figure>
           </article>
         </div>
