--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ https://templatemo.com/tm-557-grad-school
                       <img src="assets/images/business-growing.png" alt="" />
                     </div>
                     <div class="col-md-6">
-                      <h4>Business Growing</h4>
+                      <h4 style="margin-top: 0.8em">Business Growing</h4>
                       <p>
                         The integrated " Tatweir " program an innovative
                         initiative specialized in providing comprehensive
@@ -250,20 +250,21 @@ https://templatemo.com/tm-557-grad-school
                 <article id="tabs-2">
                   <div class="row">
                     <div class="col-md-6">
-                      <img src="assets/images/innovative-solutions.png" alt="" />
+                      <img
+                        src="assets/images/innovative-solutions.png"
+                        alt=""
+                      />
                     </div>
                     <div class="col-md-6">
-                      <h4>innovative solutions</h4>
+                      <h4 style="margin-top: 0.8em">innovative solutions</h4>
                       <p>
                         The vision of the "Tatweer" program is to deliver
                         practical and innovative solutions that enable
                         businesses to maximize its potential, enhance its market
-                        performance, and strengthen its financial results.
-                      </p>
-                      <p>
-                        We believe in a collaborative approach, where we become
-                        an extension of our client team, listen to their needs,
-                        and design solutions that align perfectly with their
+                        performance, and strengthen its financial results. We
+                        believe in a collaborative approach, where we become an
+                        extension of our client team, listen to their needs, and
+                        design solutions that align perfectly with their
                         specific objectives.
                       </p>
 
@@ -274,10 +275,10 @@ https://templatemo.com/tm-557-grad-school
                 <article id="tabs-3">
                   <div class="row">
                     <div class="col-md-6">
-                      <img src="assets/images/choose-us-image-03.png" alt="" />
+                      <img src="assets/images/commitment-img1.png" alt="" />
                     </div>
                     <div class="col-md-6">
-                      <h4>Our Commitment</h4>
+                      <h4 style="margin-top: 0.8em">Our Commitment</h4>
                       <p>
                         Our commitment extends far beyond the delivery of
                         theoretical plans and proposed solutions. We stand
@@ -351,7 +352,12 @@ https://templatemo.com/tm-557-grad-school
           </div>
           <div class="owl-carousel owl-theme">
             <div class="item">
-              <img src="assets/images/courses-01.jpg" alt="Course #1" />
+              <img
+                src="assets/images/strategy-img3.jpg"
+                alt="Course #1"
+                width="285"
+                height="170"
+              />
               <div class="down-content">
                 <h4>Strategic Development</h4>
                 <!-- <p>You can get free images and videos for your websites by visiting Unsplash, Pixabay, and Pexels.</p> -->
@@ -382,7 +388,12 @@ https://templatemo.com/tm-557-grad-school
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/courses-02.jpg" alt="Course #2" />
+              <img
+                src="assets/images/courses-02.jpg"
+                alt="Course #2"
+                width="285"
+                height="170"
+              />
               <div class="down-content">
                 <h4>Marketing Consultations</h4>
                 <details>
@@ -415,7 +426,12 @@ https://templatemo.com/tm-557-grad-school
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/courses-03.jpg" alt="Course #3" />
+              <img
+                src="assets/images/courses-03.jpg"
+                alt="Course #3"
+                width="285"
+                height="170"
+              />
               <div class="down-content">
                 <h4>Sales Consultations</h4>
                 <details>
@@ -447,7 +463,12 @@ https://templatemo.com/tm-557-grad-school
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/courses-04.jpg" alt="Course #4" />
+              <img
+                src="assets/images/socilmedia-img1.jpg"
+                alt="Course #4"
+                width="285"
+                height="170"
+              />
               <div class="down-content">
                 <h4>Digital Marketing Consultations</h4>
                 <details>
@@ -480,7 +501,12 @@ https://templatemo.com/tm-557-grad-school
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/courses-05.jpg" alt="" />
+              <img
+                src="assets/images/courses-05.jpg"
+                alt=""
+                width="285"
+                height="170"
+              />
               <div class="down-content">
                 <h4>Technological Consultations</h4>
                 <details>
@@ -514,12 +540,17 @@ https://templatemo.com/tm-557-grad-school
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/courses-01.jpg" alt="" />
+              <img
+                src="assets/images/feasibility-img2.jpg"
+                alt=""
+                width="285"
+                height="170"
+              />
               <div class="down-content">
                 <h4>
-                  <span style="font-size: 1.1em">Feasibility Studies:</span>
+                  <span style="font-size: 1.1em">Feasibility Study</span>
                 </h4>
-                <details>
+                <details style="margin-top: 8px; margin-top: 2.3em">
                   <summary>
                     <p style="text-align: center">
                       We provide an objective analytical study.
@@ -868,7 +899,11 @@ https://templatemo.com/tm-557-grad-school
         <div class="row">
           <div class="col-md-12">
             <p>
-              <i class="fa fa-copyright"></i> Copyright 2025 by GoMastery
+              Developed By
+              <a href="https://go-mastery.com/" target="_blank"
+                ><span style="color: #f5a425">GoMastery</span> </a
+              ><i class="fa fa-copyright"></i>2025
+
               <!-- <a href="https://templatemo.com" rel="sponsored" target="_parent"
                 >TemplateMo</a
               > -->
