--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ https://templatemo.com/tm-557-grad-school
               <!-- <em>atweir</em> -->
               <img
                 style="vertical-align: middle"
-                src="assets/images/t-logo4.png"
+                src="assets/images/t-logo5.png"
                 width="160"
                 height="60"
                 alt=""
@@ -565,7 +565,7 @@ https://templatemo.com/tm-557-grad-school
                 </div> -->
               </div>
             </div>
-            <div class="item">
+            <!-- <div class="item">
               <img src="assets/images/courses-02.jpg" alt="" />
               <div class="down-content">
                 <h4>Web Development</h4>
@@ -644,7 +644,7 @@ https://templatemo.com/tm-557-grad-school
                   <a href="#">Pay <i class="fa fa-angle-double-right"></i></a>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
