--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ https://templatemo.com/tm-557-grad-school
     <!--header-->
     <header class="main-header clearfix" role="header">
       <div class="logo" >
-      <!-- <img style=" vertical-align: middle; padding-bottom: 2em;"  src="assets/images/t-logo.png"  width="60" height="90" alt=""> -->
-      <a href="#section1">  <em>atweir</em> </a>
+      <img style=" vertical-align: middle; padding-bottom: 2em;"  src="assets/images/t-logo5.png"  width="160" alt="">
+      <!-- <a href="#section1">  <em>atweir</em> </a> -->
     </div> 
       <a href="#menu" class="menu-link"><i class="fa fa-bars"></i></a>
       <nav id="menu" class="main-nav" role="navigation">
