some edit for arabic lang

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <title>Tatweir Pro</title>
+    <title>برنامج تطوير </title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -42,12 +42,12 @@ https://templatemo.com/tm-557-grad-school
       <a href="#menu" class="menu-link"><i class="fa fa-bars"></i></a>
       <nav id="menu" class="main-nav" role="navigation">
         <ul class="main-menu">
-          <li><a href="#section1">Home</a></li>
-          <li><a href="#section2">About Us</a></li>
-          <li><a href="#section3">Services</a></li>
-          <li><a href="#section4">What We Do</a></li>
-          <li><a href="#section5">Parteners</a></li>
-          <li><a href="#section6">Contact</a></li>
+          <li><a href="#section6" style="  font-size: 18px;">أتصل بنا</a></li>
+          <li><a href="#section5" style="  font-size: 18px;">شركاء النجاح</a></li>
+          <li><a href="#section4" style="  font-size: 18px;">البرنامج</a></li>
+          <li><a href="#section3" style="  font-size: 18px;">خدماتنا</a></li>
+          <li><a href="#section2" style="  font-size: 18px;">من نحن</a></li>
+          <li><a href="#section1" style="  font-size: 18px;">الرئيسية</a></li>
         </ul>
       </nav>
     </header>
@@ -60,13 +60,14 @@ https://templatemo.com/tm-557-grad-school
 
       <div class="video-overlay header-text">
         <div class="caption">
-          <h6>Complete Blueprint For Your Growth</h6>
-          <h2>Accelerate Your 
-            <em> Success</em>
+          <h5>المنهج الكامل لنمو أعمالك</h5>
+          <h2> أسرع طريق نحو
+            <em> النجاح</em>
           </h2>
           <div class="main-button">
             <div class="scroll-to-section">
-              <a href="#section2">Discover more</a>
+              <a href="#section2"   
+            style="font-size: 18px;">اكتشف المزيد</a>
             </div>
           </div>
         </div>
@@ -79,30 +80,30 @@ https://templatemo.com/tm-557-grad-school
         <div class="row">
           <div class="col-lg-4 col-12">
             <div class="features-post">
-              <div class="features-content">
+              <div class="features-content ">
                 <div class="content-show">
                   <h4   style="
                       display: flex;
                       align-items: center;
                       justify-content: center;
+                      font-size: 18px;
                     ">
                     <i class="fa fa-pencil"></i>
-                    Business Development
+                    تطوير الأعمال
                   </h4>
                 </div>
                 <div class="content-hide">
-                  <p>
-                    We build effective growth pipelines and operational
-                    frameworks to expand your market presence and ensure
-                    long-term, sustainable profitability for your company.
+                   <p  style="
+                      text-align: right;
+                      font-size: 16px;
+                    ">
+                    نحن نوفر لك حلولاً استراتيجية مبتكرة ومتكاملة لتعزيز نمو أعمالك التجارية، وزيادة حضورك في السوق، وتحقيق أرباح مستدامة
                   </p>
                   <p class="hidden-sm">
-                    We build growth frameworks and expand market presence to
-                    drive your company's long-term profitability and sustainable
-                    success.
+                    نهدف الى بناء أطر لنمو عملك وتعزيز حضوره فى السوق لدفع الأرباح الى الحد الأقصى
                   </p>
                   <div class="scroll-to-section">
-                    <a href="#section2">More Info.</a>
+                    <a href="#section2">المزيد</a>
                   </div>
                 </div>
               </div>
@@ -117,24 +118,23 @@ https://templatemo.com/tm-557-grad-school
                       display: flex;
                       align-items: center;
                       justify-content: center;
+                      font-size: 18px;
                     "
                   >
-                    <i class="fa fa-graduation-cap"></i> Innovative Strategy
+                    <i class="fa fa-graduation-cap"></i> استراتيجيات مبتكرة
                   </h4>
                 </div>
                 <div class="content-hide">
-                  <p>
-                    We craft creative, data-informed strategies that provide a
-                    distinct competitive edge, transforming market challenges
-                    into tangible opportunities for breakthrough growth and
-                    market leadership.
+                   <p  style="
+                      text-align: right;
+                      font-size: 16px;
+                    ">
+                    صمم استراتيجيات إبداعية تقوم على البيانات، لتوفير ميزة تنافسية فريدة، تُحوّل تحديات السوق إلى فرص ملموسة لتحقيق النموٍّ و الريادة السوقية.
                   </p>
                   <p class="hidden-sm">
-                    We create unique, data-driven plans to secure a powerful
-                    competitive advantage and unlock new growth opportunities.
-                  </p>
+                    نُعدّ خططًا فريدة قائمة على البيانات لضمان ميزة تنافسية قوية، وفتح آفاق جديدة للنمو                  </p>
                   <div class="scroll-to-section">
-                    <a href="#section4">Details</a>
+                    <a href="#section4">المزيد</a>
                   </div>
                 </div>
               </div>
@@ -149,26 +149,26 @@ https://templatemo.com/tm-557-grad-school
                       display: flex;
                       align-items: center;
                       justify-content: center;
+                      font-size: 18px;
                     "
                   >
-                    <i class="fa fa-book"></i>Marketing Solutions
+                    <i class="fa fa-book"></i>حلول التسويق
                   </h4>
                 </div>
                 <div class="content-hide">
-                  <p>
-                    We provide integrated consulting services including
-                    strategic development, marketing, sales, and digital
-                    solutions. Our tailored approach drives sustainable growth
-                    and enhances your market positioning to achieve outstanding
-                    business results.
+                  <p  style="
+                      text-align: right;
+                      font-size: 16px;
+                    ">
+                    نحن نقدم خدمات استشارية متكاملة تشمل التطوير الاستراتيجي،
+                    والتسويق، والمبيعات، والحلول الرقمية. نهجنا المصمم خصيصًا
+                    يعزز النمو المستدام ويعزز من موقعك في السوق لتحقيق نتائج
+                    أعمال متميزة.
                   </p>
                   <p class="hidden-sm">
-                    Our integrated consulting in strategic, marketing, and
-                    digital solutions drives growth and enhances your market
-                    position.
-                  </p>
+خدماتنا الاستشارية المتكاملة في مجالات الاستراتيجية والتسويق والحلول الرقمية تساهم في دفع عجلة النمو وتعزيز مكانتك في السوق                  </p>
                   <div class="scroll-to-section">
-                    <a href="#section3">Read More</a>
+                    <a href="#section3">المزيد</a>
                   </div>
                 </div>
               </div>
@@ -184,18 +184,18 @@ https://templatemo.com/tm-557-grad-school
           <div class="col-md-12">
             <div class="section-heading">
               <h2>
-                What is the
+                ماذا سيحدث مع
                 <!-- <span style="font-style: bold; color: #f5a425">TATWEIR</span> -->
-                Program?
+                تطوير?
               </h2>
             </div>
           </div>
           <div class="col-md-12">
             <div id="tabs">
               <ul>
-                <li><a href="#tabs-1">Business Growing</a></li>
-                <li><a href="#tabs-2">innovative solutions</a></li>
-                <li><a href="#tabs-3">Our commitment</a></li>
+                <li><a href="#tabs-1">نمو الأعمال</a></li>
+                <li><a href="#tabs-2">الحلول المبتكرة</a></li>
+                <li><a href="#tabs-3">التزامنا</a></li>
               </ul>
               <section class="tabs-content">
                 <article id="tabs-1">
@@ -204,14 +204,9 @@ https://templatemo.com/tm-557-grad-school
                       <img src="assets/images/business-growing.png" alt="" />
                     </div>
                     <div class="col-md-6">
-                      <h4>Business Growing</h4>
+                      <h4>نموالأعمال</h4>
                       <p>
-                        The integrated " Tatweir " program an innovative
-                        initiative specialized in providing comprehensive
-                        business and marketing solutions. This program is
-                        designed to function as a strategic partner for
-                        businesses, offering specialized consultations in the
-                        fields of business development, marketing, and sales.
+                        برنامج "تطوير" المتكامل هو مبادرة مبتكرة متخصصة في تقديم حلول شاملة في مجال الأعمال والتسويق صُمم هذا البرنامج ليكون شريكًا استراتيجيًا للشركات، حيث يقدم استشارات متخصصة في مجالات تطوير الأعمال والتسويق والمبيعات.
                       </p>
                     </div>
                   </div>
@@ -226,7 +221,7 @@ https://templatemo.com/tm-557-grad-school
                     </div>
                     <div class="col-md-6">
                       <!-- <h4 style="margin-top: 0.8em">innovative solutions</h4> -->
-                      <h4>innovative solutions</h4>
+                      <h4>الحلول المبتكرة</h4>
 
                       <p>
                         The vision of the "Tatweer" program is to deliver
@@ -249,7 +244,7 @@ https://templatemo.com/tm-557-grad-school
                       <img src="assets/images/commitment-img1.png" alt="" />
                     </div>
                     <div class="col-md-6">
-                      <h4>Our Commitment</h4>
+                      <h4>التزامنا</h4>
                       <p>
                         Our commitment extends far beyond the delivery of
                         theoretical plans and proposed solutions. We stand
